; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_callback_groupchat_peer_delete.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_callback_groupchat_peer_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { void (i8*, i32, i32, i8*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @callback_groupchat_peer_delete(i32* %0, i32 %1, void (i8*, i32, i32, i8*)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca void (i8*, i32, i32, i8*)*, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store void (i8*, i32, i32, i8*)* %2, void (i8*, i32, i32, i8*)** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.TYPE_3__* @get_group_c(i32* %9, i32 %10)
  store %struct.TYPE_3__* %11, %struct.TYPE_3__** %8, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %13 = icmp ne %struct.TYPE_3__* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %19

15:                                               ; preds = %3
  %16 = load void (i8*, i32, i32, i8*)*, void (i8*, i32, i32, i8*)** %7, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  store void (i8*, i32, i32, i8*)* %16, void (i8*, i32, i32, i8*)** %18, align 8
  store i32 0, i32* %4, align 4
  br label %19

19:                                               ; preds = %15, %14
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local %struct.TYPE_3__* @get_group_c(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
